--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "repository": {
     "type": "git",
-    "url": "https://github.com/mbostock/d3.git"
+    "url": "https://github.com/denglend/spade.git"
   }
 }
